// Use DBML to define your database structure
// Docs: https://www.dbml.org/docs

// Visualize the database structure using: https://dbdiagram.io/

Table doctors {
  id integer [primary key]
  name varchar
  email varchar
  password varchar
  medical_code varchar
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp 
}

Table patients {
  id integer [primary key]
  name varchar
  email varchar
  password varchar
  age integer
  birthday timestamp
  sex varchar
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp 
}

Table appointments {
  id integer [primary key]
  title varchar
  date timestamp
  status integer
  patient_id integer
  doctor_id integer
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp 
}

Table exams {
  id integer [primary key]
  title varchar
  date timestamp
  status integer
  result varchar
  patient_id integer
  doctor_id integer
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp 
}

Table prescriptions {
  id integer [primary key]
  title varchar
  expiration_date timestamp
  patient_id integer
  doctor_id integer
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp 
}

Ref: appointments.patient_id > patients.id
Ref: appointments.doctor_id > doctors.id

Ref: exams.patient_id > patients.id
Ref: exams.doctor_id > doctors.id

Ref: prescriptions.patient_id > patients.id
Ref: prescriptions.doctor_id > doctors.id